# hello-cpp

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md  justfile
lib/: hello-time.cc
main/: BUILD  hello-greet.cc  hello-world.cc  hello-world.cpp
src/: main.cpp
